--- a/Portfolio website/index.html
+++ b/Portfolio website/index.html
@@ -13,15 +13,28 @@
 
 <body>
     <div class="hero">
-        <h2 class="logo">Portfolio</h2>
+        <div class="nav">
+        <h2 class="logo">Portfo<span>lio</span></h2>
         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Projects</li>
-            <li>Contact</li>
-          </ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>    
         <a href="#" class="btn"> Subscribe</a>
     </div>
+    <div class="content">
+        <h4>Hello, my name is</h4>
+        <h1>AL <span>AMAN</span></h1>
+        <h3>I am a software developer</h3>
+            <div class="newsletter">
+                <form>
+                    <input type="email" name="email" id="mail" placeholder="Enter your email">
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+    </div>
+</div>
 </body>
 
 
